  - Fix RFC822 incompliant use of IP-address in Message-ID.
  - Uneditable address book entries no longer have checkboxes on addresses page.
  - Fix that viewing the last page of a mailbox with one message always
    claimed that the total of messages in that mailbox was 1.
  - Alignment of title text above folder list fixed.
  - Added Uighur language support.
  - Added status bar to compose window when "Compose In New Window" is used.
  - Fixed issue with user setting display of messages to 0 per page.  Fixes
    bug #960447.
  - Detect, handle, and warn on LOGINDISABLED from IMAP server.
  - Correctly sort folders including - in the name.  Affects folders beginning
    with the same names, but second folder has - with additional characters.
    Patch courtesy of Morten Nilsen <morten[@]nilsen.com>.
  - Added size limit to signatures saved in file backend. Created error_option_save
    function, that allows sending error message to options page. Thanks to Martynas
    Bieliauskas for spotting big signature "option".
  - $agresive_decoding configuration option changed to $aggressive_decoding.
    Fixed spelling.
  - Fixed $custom_css loading in squirrelspell plugin.
  - Referenced document (presets.txt) missing.  Copied from devel.
  - Make SMTP Authentication detection in conf.pl more RFC-compliant.
  - Fixed IMAP errors when using mail_fetch plugin to auto-fetch on login.
  - Fixed folder list in Create Folders list for Courier (properly skip INBOX).
  - Corrected poor English in a string (#775978).
  - Corrected bug in SquirrelSpell that'd put the corrected spelling on the wrong
    line if quoting inline, or below the original email (#906217).
  - LC_NUMERIC locale is set to C. Some plugins might use decimal delimiters 
    incorrectly (#1027130).
  - Turkish translation uses C character case conversion rules. Fixes php and
    squirrelmail functions are assume English conversion rules.
  - Removed X-Mailer header from SquirrelMail. SpamAssassin 3.0 detects 